--- a/index.html
+++ b/index.html
@@ -745,12 +745,13 @@
                 </div>
 
                 <div class="mfi-content-box">
-                  <p class="mfi-content-title">Lorem ipsum dolor sit amet.</p>
+                  <p class="mfi-content-title">Gà mê mật: Hương vị ngọt ngào từ thiên nhiên</p>
 
                   <p class="mfi-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Facere incidunt reprehenderit vero omnis totam non facilis
-                    cum fugiat porro ratione.
+                    Lần đầu tiên, chúng tôi mang đến cho bạn hương vị ngọt ngào đến từ thiên nhiên
+                    Hoà quyện trong từng thớ thịt gà là sốt mật ong cao nguyên, khiến cho bao con tim mê Gà đều xao xuyến.
+                    Dù bạn là ai - Dù mang phong cách nào - Gà Mê Mật cũng chiều được hết
+                    Thưởng thức ngay vị ngon tuyệt đỉnh - Gà Mê Mật tại các cửa hàng Lotteria trên toàn quốc, giá "đáng iu" chỉ 40.000/miếng
                   </p>
                 </div>
 
@@ -770,12 +771,18 @@
                 </div>
 
                 <div class="mfi-content-box">
-                  <p class="mfi-content-title">Lorem ipsum dolor sit amet.</p>
+                  <p class="mfi-content-title">Ra mắt kem Tornado mới kèm hot sale cực cuốn</p>
 
                   <p class="mfi-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Facere incidunt reprehenderit vero omnis totam non facilis
-                    cum fugiat porro ratione.
+                    Lộ diện 2 “idol” với visual cực cuốn – hứa hẹn khuấy đảo mùa hè cùng các RIA Fans:
+                    Tornado Dâu “ngon thần sầu” và Tornado Trà xanh “mát lạnh”
+                    <p class="mfi-content">
+                      Thưởng thức ngay 2 siêu phẩm hot hit mùa hè này - “mlem” hơn nữa là ưu đãi
+                      “Mua 2 được 3” – MIỄN PHÍ 1 kem Tornado bất kỳ khi mua bộ đô iKem Tornado Dâu và Trà xanh.
+                    </p>
+                    <p class="mfi-content">
+                      Giá chỉ 20.000đ/ly – Triển nhanh đi nè các bạn ơi!
+                    </p>
                   </p>
                 </div>
 
@@ -795,12 +802,12 @@
                 </div>
 
                 <div class="mfi-content-box">
-                  <p class="mfi-content-title">Lorem ipsum dolor sit amet.</p>
+                  <p class="mfi-content-title">Deal hot giá hời: Tháng 11 - Rộn rã cùng nhau</p>
 
                   <p class="mfi-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Facere incidunt reprehenderit vero omnis totam non facilis
-                    cum fugiat porro ratione.
+                    Super Idol "Gà Tứ vị" đã trở lại, Fans thoả thích "mix and match" đủ loại gà sốt để thưởng thức cùng nhau chỉ với 130.000đ thui nè
+                    Cớ tới 4 lựa chọn nha: Gà Mê Mật ngọt ngào quyến rũ - Gà H&S cay ngọt siêu cuốn - Gà Sốt Phô Mai béo thơm - Gà Sốt Đậu trọn vị mặn - ngọt -cay
+                    Fans nào thích "nhâm nhi" một mình thì đừng bỏ qua Combo 81.000 này nha: Ga rán + Mỳ Ý + Pepsi + Kem tornado (1 trong 3 vị: Matcha/Strawberry/Chocolate)
                   </p>
                 </div>
 
@@ -975,8 +982,7 @@
             <div class="container">
               <div class="footer-bottom-flex">
                 <p class="footer-bottom-content">
-                  Copyright <span>&#169;</span> 2023 Japan Figure. Powered by
-                  Haravan
+                  Copyright <span>&#169;</span> 2023 Nollowa Chicken
                 </p>
               </div>
             </div>
