--- a/category.html
+++ b/category.html
@@ -352,22 +352,22 @@
             <div class="d-flex justify-content-center">
               <div class="col-md-12">
                 <div class="row shop-container">
-                  <div class="col-md-3 col-6">
+                  <div class="col-md-4 col-6">
                     <div class="product my-product">
                       <div class="product-img">
                         <a href="shop-product-detail.html">
                           <img
-                            src="assets/images/products/img/main-img/main-content-img-16.1.png"
+                            src="https://cdn.lotteria.vn/media/catalog/product/l/c/lc0001_4.png"
                             alt="product_img1"
                           />
                         </a>
                       </div>
                       <div class="product_info">
                         <h6 class="product_title">
-                          <a href="shop-product-detail.html">${item.name}</a>
+                          <a href="shop-product-detail.html">Gà rán phần</a>
                         </h6>
                         <div class="product_price">
-                          <span class="price">$${item.price}</span>
+                          <span class="price">$12</span>
                         </div>
 
                         <div class="buy btn-hover">
@@ -384,22 +384,22 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3 col-6">
+                  <div class="col-md-4 col-6">
                     <div class="product my-product">
                       <div class="product-img">
                         <a href="shop-product-detail.html">
                           <img
-                            src="assets/images/products/img/main-img/main-content-img-16.1.png"
+                            src="https://static.kfcvietnam.com.vn/images/items/lg/BJ.jpg?v=LKwbVL"
                             alt="product_img1"
                           />
                         </a>
                       </div>
                       <div class="product_info">
                         <h6 class="product_title">
-                          <a href="shop-product-detail.html">${item.name}</a>
+                          <a href="shop-product-detail.html">Gà đùi nướng giấy bạc</a>
                         </h6>
                         <div class="product_price">
-                          <span class="price">$${item.price}</span>
+                          <span class="price">$18</span>
                         </div>
 
                         <div class="buy btn-hover">
@@ -416,22 +416,22 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3 col-6">
+                  <div class="col-md-4 col-6">
                     <div class="product my-product">
                       <div class="product-img">
                         <a href="shop-product-detail.html">
                           <img
-                            src="assets/images/products/img/main-img/main-content-img-16.1.png"
+                            src="https://static.kfcvietnam.com.vn/images/items/lg/lunch-Teriyaki.jpg?v=LKwbVL"
                             alt="product_img1"
                           />
                         </a>
                       </div>
                       <div class="product_info">
                         <h6 class="product_title">
-                          <a href="shop-product-detail.html">${item.name}</a>
+                          <a href="shop-product-detail.html">Combo Trưa: Cơm gà Terriyaki + Pepsi</a>
                         </h6>
                         <div class="product_price">
-                          <span class="price">$${item.price}</span>
+                          <span class="price">$34</span>
                         </div>
 
                         <div class="buy btn-hover">
@@ -448,22 +448,86 @@
                     </div>
                   </div>
 
-                  <div class="col-md-3 col-6">
+                  <div class="col-md-4 col-6">
                     <div class="product my-product">
                       <div class="product-img">
                         <a href="shop-product-detail.html">
                           <img
-                            src="assets/images/products/img/main-img/main-content-img-16.1.png"
+                            src="https://static.kfcvietnam.com.vn/images/items/lg/lunch-burger-tom.jpg?v=LKwbVL"
                             alt="product_img1"
                           />
                         </a>
                       </div>
                       <div class="product_info">
                         <h6 class="product_title">
-                          <a href="shop-product-detail.html">${item.name}</a>
+                          <a href="shop-product-detail.html">Combo Ăn vặt: Hambuger gà + Pepsi</a>
                         </h6>
                         <div class="product_price">
-                          <span class="price">$${item.price}</span>
+                          <span class="price">$24</span>
+                        </div>
+
+                        <div class="buy btn-hover">
+                          <p>
+                            <i class="fas fa-shopping-cart"></i> Thêm vào giỏ
+                            hàng
+                          </p>
+                        </div>
+
+                        <div class="pr_desc">
+                          <p>${item.description}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4 col-6">
+                    <div class="product my-product">
+                      <div class="product-img">
+                        <a href="shop-product-detail.html">
+                          <img
+                            src="https://static.kfcvietnam.com.vn/images/items/lg/lunch-burger-tom.jpg?v=LKwbVL"
+                            alt="product_img1"
+                          />
+                        </a>
+                      </div>
+                      <div class="product_info">
+                        <h6 class="product_title">
+                          <a href="shop-product-detail.html">Combo Ăn vặt: Hambuger gà + Pepsi</a>
+                        </h6>
+                        <div class="product_price">
+                          <span class="price">$24</span>
+                        </div>
+
+                        <div class="buy btn-hover">
+                          <p>
+                            <i class="fas fa-shopping-cart"></i> Thêm vào giỏ
+                            hàng
+                          </p>
+                        </div>
+
+                        <div class="pr_desc">
+                          <p>${item.description}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4 col-6">
+                    <div class="product my-product">
+                      <div class="product-img">
+                        <a href="shop-product-detail.html">
+                          <img
+                            src="https://static.kfcvietnam.com.vn/images/items/lg/lunch-burger-tom.jpg?v=LKwbVL"
+                            alt="product_img1"
+                          />
+                        </a>
+                      </div>
+                      <div class="product_info">
+                        <h6 class="product_title">
+                          <a href="shop-product-detail.html">Combo Ăn vặt: Hambuger gà + Pepsi</a>
+                        </h6>
+                        <div class="product_price">
+                          <span class="price">$25</span>
                         </div>
 
                         <div class="buy btn-hover">
@@ -618,8 +682,7 @@
           <div class="container">
             <div class="footer-bottom-flex">
               <p class="footer-bottom-content">
-                Copyright <span>&#169;</span> 2023 Japan Figure. Powered by
-                Haravan
+                Copyright <span>&#169;</span> 2023 Nollowa Chicken
               </p>
             </div>
           </div>
