--- a/index.html
+++ b/index.html
@@ -242,7 +242,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -326,8 +325,8 @@
             <div class="main-top-row-content">
               <div class="main-top-item groupbanner-hover">
                 <div class="main-top-item-content">
-                  <p>Bộ sưu tập</p>
-                  <h2>Nendoroid</h2>
+                  <p>Hot meal </p>
+                  <h2>Gà rán thơm ngon</h2>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </p>
@@ -348,7 +347,7 @@
               <div class="main-top-item groupbanner-hover">
                 <div class="main-top-item-content">
                   <p>Bộ sưu tập</p>
-                  <h2>Nendoroid</h2>
+                  <h2>Combo vui vẻ</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   </p>
@@ -568,53 +567,7 @@
             <button class="main-bottom-slide-prevbtn"><</button>
             <div class="main-bottom-flexbox">
 
-              <div class="main-bottom-item">
-                <img
-                  src="assets/images/index-img/main-bottom-img/New folder/combo1.jpg"
-                  alt=""
-                />
-
-                <div class="description-content">
-                  <p>Lorem ipsum dolor sit amet consectetur.</p>
-                  <p class="price">1,200,000<span>đ</span></p>
-                </div>
-              </div>
-
-              <div class="main-bottom-item">
-                <img
-                  src="assets/images/index-img/main-bottom-img/New folder/combo2.jpg"
-                  alt=""
-                />
-
-                <div class="description-content">
-                  <p>Lorem ipsum dolor sit amet consectetur.</p>
-                  <p class="price">1,200,000<span>đ</span></p>
-                </div>
-              </div>
-
-              <div class="main-bottom-item">
-                <img
-                  src="assets/images/index-img/main-bottom-img/New folder/combo3.jpg"
-                  alt=""
-                />
-
-                <div class="description-content">
-                  <p>Lorem ipsum dolor sit amet consectetur.</p>
-                  <p class="price">1,200,000<span>đ</span></p>
-                </div>
-              </div>
-
-              <div class="main-bottom-item">
-                <img
-                  src="assets/images/index-img/main-bottom-img/New folder/combo4.jpg"
-                  alt=""
-                />
-
-                <div class="description-content">
-                  <p>Lorem ipsum dolor sit amet consectetur.</p>
-                  <p class="price">1,200,000<span>đ</span></p>
-                </div>
-              </div>
+              
 
               <!-- <div class="main-bottom-item">
                 <img
