--- a/my-account.html
+++ b/my-account.html
@@ -271,7 +271,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -451,7 +450,7 @@
                               <option value="available">Sản phẩm có sẵn</option>
                               <option value="order">Sản phẩm oder</option>
                               <option value="scale-figure">
-                                Sản phẩm tỉ lệ chuẩn
+                                Sản phẩm Sale
                               </option>
                             </select>
 
@@ -549,7 +548,7 @@
                                   role="tab"
                                   aria-controls="special"
                                   aria-selected="false"
-                                  >Sản phẩm tỉ lệ chuẩn
+                                  >Sản phẩm Hot Sale
                                 </a>
                               </li>
                             </ul>
