--- a/order-completed.html
+++ b/order-completed.html
@@ -283,7 +283,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -349,7 +348,7 @@
                   tôi sẽ gửi thông tin chi tiết thông qua Email của bạn.
                 </p>
                 <a
-                  href="shop-left-sidebar.html"
+                  href="index.html"
                   class="btn btn-fill-out"
                   id="buy-continue-btn"
                   >Tiếp tục mua sắm</a
