--- a/shop-cart.html
+++ b/shop-cart.html
@@ -271,7 +271,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -476,7 +475,7 @@
                         <td class="cart_total_amount">
                           <strong
                             ><span class="cart-item-total-amount">349.00</span>
-                            vnđ</strong
+                            $</strong
                           >
                         </td>
                       </tr>
