--- a/shop-product-detail.html
+++ b/shop-product-detail.html
@@ -68,7 +68,7 @@
     <div class="wrapper-header">
       <header class="header">
         <div class="topbar">
-          <p>Figure bạn thích hiện đang mở order</p>
+          <p>Món ăn bạn yêu thích hiện đang mở order</p>
           <button class="btn topbar-btn">Xem ngay</button>
         </div>
 
@@ -282,7 +282,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -353,7 +352,7 @@
               <div class="pr_detail">
                 <div class="product_description">
                   <h4 class="product_title">
-                    <a href="#">Blue Dress For Woman</a>
+                    <a href="#">Gà rán phần</a>
                   </h4>
                   <div class="product_price">
                     <span class="price">$45.00</span>
@@ -409,7 +408,7 @@
                 </div>
                 <hr />
                 <ul class="product-meta">
-                  <li>Category: <a href="#">Clothing</a></li>
+                  <li>Category: <a href="#">Food</a></li>
                 </ul>
 
                 <div class="product_share">
@@ -519,7 +518,7 @@
                   >
                     <div class="comments">
                       <h5 class="product_tab_title">
-                        2 Review For <span>Blue Dress For Woman</span>
+                        2 Review For <span>Gà rán phần</span>
                       </h5>
                       <ul class="list_none comment_list mt-4">
                         <li>
@@ -662,8 +661,8 @@
       <section class="footer-top">
         <div class="container">
           <div class="footer-title-content">
-            <span class="footer-title">Follow Japan Figure on Instagram</span>
-            <p class="footer-title-email">@example.vn</p>
+            <span class="footer-title">Follow us on Instagram</span>
+            <p class="footer-title-email">nollowa@example.vn</p>
           </div>
         </div>
       </section>
@@ -672,51 +671,7 @@
 
       <footer>
         <!-- ******************Footer Banner Start****************** -->
-        <section class="footer-banner">
-          <div class="footer-banner-flex">
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-1.png"
-                class="banner-hover-img"
-              />
-            </div>
-
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-2.png"
-                class="banner-hover-img"
-              />
-            </div>
-
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-3.png"
-                class="banner-hover-img"
-              />
-            </div>
-
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-4.png"
-                class="banner-hover-img"
-              />
-            </div>
-
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-5.png"
-                class="banner-hover-img"
-              />
-            </div>
-
-            <div class="groupbanner-hover footer-img-box">
-              <img
-                src="assets/images/index-img/footer-banner/footer-banner-6.png"
-                class="banner-hover-img"
-              />
-            </div>
-          </div>
-        </section>
+        
 
         <!-- ******************Footer Banner End****************** -->
 
@@ -728,7 +683,7 @@
                 <div class="footer-item">
                   <div class="footer-item-title">
                     <img
-                      src="assets/images/products/img/logo-img/3-removebg-preview.png"
+                      src="assets/images/products/img/logo-img/logo-preview-1.png"
                       alt=""
                     />
                   </div>
@@ -747,9 +702,11 @@
                   </div>
 
                   <div class="footer-item-content">
-                    <p>
-                      <span>Địa chỉ:</span> Quận X, Tp.XXX Japan Figure chưa có
-                      không gian trưng bày, bạn vui lòng hẹn trước khi đến
+                    <p class="footer-item-title">
+                      Địa chỉ:
+                      <p>Chi nhánh 1: Quận X, Tp.XXX</p> 
+                      <p>Chi nhánh 2: Quận X, Tp.XXX </p>
+                      <p>Chi nhánh 3: Quận X, Tp.XXX</p> 
                     </p>
                     <p><span>Điện thoại:</span> 090 **** ***</p>
                     <p><span>Email:</span> example@gmail.vn</p>
@@ -814,8 +771,7 @@
             <div class="container">
               <div class="footer-bottom-flex">
                 <p class="footer-bottom-content">
-                  Copyright <span>&#169;</span> 2023 Japan Figure. Powered by
-                  Haravan
+                  Copyright <span>&#169;</span> 2023 Nollowa Chicken
                 </p>
               </div>
             </div>
