--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
     <div class="wrapper-header">
       <header class="header">
         <div class="topbar">
-          <p>Figure bạn thích hiện đang mở order</p>
+          <p>Món ngon bạn yêu thích hiện đang mở order</p>
           <button class="btn topbar-btn">Xem ngay</button>
         </div>
 
@@ -273,7 +273,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -391,8 +390,8 @@
     <section class="footer-top">
       <div class="container">
         <div class="footer-title-content">
-          <span class="footer-title">Follow Japan Figure on Instagram</span>
-          <p class="footer-title-email">@example.vn</p>
+          <span class="footer-title">Follow us on Instagram</span>
+            <p class="footer-title-email">nollowa@example.vn</p>
         </div>
       </div>
     </section>
@@ -400,51 +399,7 @@
     <!-- ******************Footer Title End****************** -->
     <footer>
       <!-- ******************Footer Banner Start****************** -->
-      <section class="footer-banner">
-        <div class="footer-banner-flex">
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-1.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-2.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-3.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-4.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-5.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-6.png"
-              class="banner-hover-img"
-            />
-          </div>
-        </div>
-      </section>
+      
 
       <!-- ******************Footer Banner End****************** -->
 
@@ -456,7 +411,7 @@
               <div class="footer-item">
                 <div class="footer-item-title">
                   <img
-                    src="assets/images/products/img/logo-img/3-removebg-preview.png"
+                    src="assets/images/products/img/logo-img/logo-preview-1.png"
                     alt=""
                   />
                 </div>
@@ -475,9 +430,11 @@
                 </div>
 
                 <div class="footer-item-content">
-                  <p>
-                    <span>Địa chỉ:</span> Quận X, Tp.XXX Japan Figure chưa có
-                    không gian trưng bày, bạn vui lòng hẹn trước khi đến
+                  <p class="footer-item-title">
+                    Địa chỉ:
+                    <p>Chi nhánh 1: Quận X, Tp.XXX</p> 
+                    <p>Chi nhánh 2: Quận X, Tp.XXX </p>
+                    <p>Chi nhánh 3: Quận X, Tp.XXX</p> 
                   </p>
                   <p><span>Điện thoại:</span> 090 **** ***</p>
                   <p><span>Email:</span> example@gmail.vn</p>
@@ -542,8 +499,7 @@
           <div class="container">
             <div class="footer-bottom-flex">
               <p class="footer-bottom-content">
-                Copyright <span>&#169;</span> 2023 Japan Figure. Powered by
-                Haravan
+                Copyright <span>&#169;</span> 2023 Nollowa Chicken
               </p>
             </div>
           </div>
