--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
     <div class="wrapper-header">
       <header class="header">
         <div class="topbar">
-          <p>Figure bạn thích hiện đang mở order</p>
+          <p>Món ngon bạn yêu thích hiện đang mở order</p>
           <button class="btn topbar-btn">Xem ngay</button>
         </div>
 
@@ -68,7 +68,7 @@
           <div class="stiky-nav-logo">
             <a href="index.html"
               ><img
-                src="assets/images/products/img/logo-img/1-removebg-preview.png"
+                src="assets/images/products/img/logo-img/logo-top.jpg"
             /></a>
           </div>
 
@@ -121,7 +121,7 @@
             <a href="index.html"
               ><img
                 class="top-logo"
-                src="assets/images/products/img/logo-img/1-removebg-preview.png"
+                src="assets/images/products/img/logo-img/logo-top.jpg"
                 alt=""
             /></a>
 
@@ -274,7 +274,6 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Japan Figure Trading</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
@@ -423,8 +422,8 @@
     <section class="footer-top">
       <div class="container">
         <div class="footer-title-content">
-          <span class="footer-title">Follow Japan Figure on Instagram</span>
-          <p class="footer-title-email">@example.vn</p>
+          <span class="footer-title">Follow us on Instagram</span>
+          <p class="footer-title-email">nollowa@example.vn</p>
         </div>
       </div>
     </section>
@@ -433,51 +432,7 @@
 
     <footer>
       <!-- ******************Footer Banner Start****************** -->
-      <section class="footer-banner">
-        <div class="footer-banner-flex">
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-1.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-2.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-3.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-4.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-5.png"
-              class="banner-hover-img"
-            />
-          </div>
-
-          <div class="groupbanner-hover footer-img-box">
-            <img
-              src="assets/images/index-img/footer-banner/footer-banner-6.png"
-              class="banner-hover-img"
-            />
-          </div>
-        </div>
-      </section>
+      
 
       <!-- ******************Footer Banner End****************** -->
 
@@ -489,7 +444,7 @@
               <div class="footer-item">
                 <div class="footer-item-title">
                   <img
-                    src="assets/images/products/img/logo-img/3-removebg-preview.png"
+                    src="assets/images/products/img/logo-img/logo-preview-1.png"
                     alt=""
                   />
                 </div>
@@ -575,8 +530,7 @@
           <div class="container">
             <div class="footer-bottom-flex">
               <p class="footer-bottom-content">
-                Copyright <span>&#169;</span> 2023 Japan Figure. Powered by
-                Haravan
+                Copyright <span>&#169;</span> 2023 Nollowa Chicken
               </p>
             </div>
           </div>
