--- a/page_khong_bat_buoc/contact.html
+++ b/page_khong_bat_buoc/contact.html
@@ -120,7 +120,7 @@
           <a href="#"
             ><img
               class="top-logo"
-              src="assets/images/index-img/logo.png"
+              src="assets/images/index-img/logo-top.jpg"
               alt=""
           /></a>
 
