--- a/shop-product-detail.html
+++ b/shop-product-detail.html
@@ -129,7 +129,7 @@
             <a href="index.html"
               ><img
                 class="top-logo"
-                src="assets/images/products/img/logo-img/1-removebg-preview.png"
+                src="assets/images/products/img/logo-img/logo-top.jpg"
                 alt=""
             /></a>
 
