--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 
                 <div class="nav-hide-item">
                   <ul class="nav-hide-box">
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Youtube</a></li>
+                    <li><a id="fb" href="#">Facebook</a></li>
+                    <li><a id="ig" href="#">Instagram</a></li>
+                    <li><a id="yt" href="#">Youtube</a></li>
                   </ul>
                 </div>
               </li>
@@ -909,19 +909,19 @@
                   <h4 class="social-title">Follow</h4>
                   <ul class="social-list">
                     <li>
-                      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                      <a id="fb" href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     </li>
                     <li>
                       <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                      <a id="ig" href="#"><i class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li>
                       <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                      <a id="yt" href="#"><i class="fa-brands fa-youtube"></i></a>
                     </li>
                   </ul>
                 </div>
