--- a/shop-product-detail.html
+++ b/shop-product-detail.html
@@ -352,7 +352,7 @@
               <div class="pr_detail">
                 <div class="product_description">
                   <h4 class="product_title">
-                    <a href="#">Gà rán phần</a>
+                    <a href="#"></a>
                   </h4>
                   <div class="product_price">
                     <span class="price">$45.00</span>
@@ -652,7 +652,7 @@
               <div class="divider"></div>
               <div class="medium_divider"></div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
       <!-- END SECTION SHOP -->
